# serial-analyzer

./: .samples  README.md  flake.nix  pyproject.toml
serial-analyzer/: __main__.py  terminalscope.py
